# ML-Compiler-TVM-MLIR

./: .gitignore  README.md  build_tvm_only.sh  pyproject.toml  pyrightconfig.json  rebuild_llvm_with_install.sh  setup_arch_packages.sh  setup_dev_env.sh  test_tvm_build.sh
docs/: compiler_passes_detailed.md  theoretical_foundations.md
examples/: advanced_tvm_passes.py  basic_usage.py  pytorch_integration_example.py  simple_add.py  tvm_pass_development.py
src/: __init__.py
src/backends/: __init__.py  auto_tuning.py  cpu.py  custom.py  gpu.py
src/integration/: __init__.py  onnx_integration.py  pytorch_integration.py  tensorflow_integration.py
src/passes/: __init__.py  fusion.py  memory.py  mlir_passes.py  tvm_passes.py
src/utils/: __init__.py  config.py  graph_utils.py  performance.py
