[project]
name = "ml-compiler-dev"
version = "0.1.0"
description = "ML Compiler Development with TVM and MLIR - Building compiler passes for ML workload optimization"
requires-python = ">=3.9"
dependencies = [
    "torch>=2.4.0",
    "torchvision",
    "torchaudio", 
    "tensorflow>=2.16.0",
    "numpy>=1.21.0",
    "pytest>=7.0.0",
    "pytest-cov",
    "black",
    "flake8",
    "jupyter",
    "matplotlib",
    "pandas",
    "tqdm",
    "pyyaml",
    "click",
]

[project.optional-dependencies]
dev = [
    "pre-commit",
    "mypy",
    "types-PyYAML",
    "sphinx",
    "sphinx-rtd-theme",
]

[tool.uv]
# This section can be used for uv configuration.

[tool.black]
line-length = 88
target-version = ['py39']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta" 